# runner-s-quest

./: Cargo.toml  README.md  TODO.md  build.rs
assets/: snow.pyxel  tileset.json
assets/levels/: level_1.json  level_2.json  level_3.json  level_4.json  level_5.json  level_6.json  level_6.pyxel  level_7.json
assets/player/: climb.pyxel  hang.pyxel  jump.pyxel  run.pyxel
assets/shader/: scene_change.frag
assets/sound/: Welcome to Runners Q.m4a  game crated with com.m4a  reload room game cra.m4a  reload room.m4a  you can always press.m4a
src/: assets.rs  door.rs  game.rs  items.rs  main.rs  particles.rs  player.rs  state.rs
src/tilemap/: helper.rs  mod.rs  pyxeledit.rs  tilemap_helper.rs
src/utils/: mod.rs  vecgrid.rs
