[package]
name = "runner-s-quest"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# comfy = "0.2.0"
comfy = { git = "https://github.com/darthdeus/comfy", rev = "442a22f" }
include_assets = "1.0.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[build-dependencies.winres]
version = "0.1"

[build-dependencies.image]
version = "0.23.4"
default-features = false
features = ["ico", "png"]
